@@ -10,7 +10,7 @@ $smilies = [
     ';-)' => 'wink.gif',
     ':-|' => 'noexpression.gif',
     ':-/' => 'confused.gif',
-    ":-(" => 'sad.gif',
+    ':-(' => 'sad.gif',
     ':-{' => 'cry.gif',
     ':weep:' => 'weep.gif',
     ':-O' => 'ohmy.gif',
@@ -184,7 +184,7 @@ $smilies = [
     ':D' => 'grin.gif',
     ':P' => 'tongue.gif',
     ':(' => 'sad.gif',
-    ":{" => 'cry.gif',
+    ':{' => 'cry.gif',
     ':|' => 'noexpression.gif',
     ':Boozer:' => 'alcoholic.gif',
     ':deadhorse:' => 'deadhorse.gif',
