@@ -168,7 +168,7 @@ function get_random_useragent()
     if (!empty($browser)) {
         shuffle($browser);
     } else {
-        $browser[] = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36";
+        $browser[] = 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36';
     }
 
     return $browser[0];
